index.css
html, body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
    color: #5a5a5a
}
#fs-modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    pointer-events: none;
    z-index: 1;
}
button.cta {
    position: absolute;
    bottom: 0;
    right: 0;
    padding: 1rem 2rem;
    margin: 1rem;
    border-radius: 1.5rem;
    border: unset;
    box-shadow: rgb(0 0 0 / 18%) 5px 4px 5px 1px;
    color: #174753;
    background-color: rgb(248, 248, 248);
    font-size: 1.25rem;
    font-family: 'Montserrat';
    font-weight: 600;
    cursor: pointer;
    pointer-events: bounding-box;
    transform: translate(calc(-50vw + 50% + 1rem), -33vh);
    transition: transform 1s ease, background-color .3s ease;;
}
button.cta:hover {
    transform: translate(calc(-50vw + 50% + 1rem), calc(-33vh - 5%));
    background-color: white;
    transition: transform 1s ease, background-color .3s ease;
}
button.cta-stuck {
    transform: translate(0,0);
    transition: transform 1s ease, background-color .3s ease;
}
button.cta-stuck:hover {
    transform: translate(0, -5%);
    background-color: white;
    transition: transform 1s ease, background-color .3s ease;
}


header {
    height: 100vh;
    min-width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    overflow-x: hidden;
    background-attachment: fixed;
    background-image: url("https://images.unsplash.com/photo-1633876452407-998ae1dda84b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1933&q=80")
}

header>h1 {
    color: white;
    font-size: 4rem;
    font-family: 'Shadows Into Light', cursive;
}


section {
    max-width: 1024px;
    margin: 6rem auto;
}
.section-header {
    text-align: center;
    font-size: 2rem;
    max-width: 1024px;
    margin: auto;
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    align-items: center;
    gap: 40px;
}
.section-header::before, .section-header::after {
    content: '';
    border-top: 6px double;
}
.destinations-container {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    width: 100%;
}
.destination-card {
    width: 300px;
    min-height: 500px;
    padding: 1rem;
}
.destination-image {
    
    background-size: cover;
    width: 300px;
    height: 400px;
    margin-bottom: 1rem;
}
.destination-image-1 {
    background-image: url('https://images.unsplash.com/photo-1562036861-44811e0b4481?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80');
}
.destination-image-2 {
    background-image: url('https://images.unsplash.com/photo-1506953823976-52e1fdc0149a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=735&q=80');
}
.destination-image-3 {
    background-image: url('https://images.unsplash.com/photo-1566159269137-ccf6e35a126e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=627&q=80');
}

.destination-desc-title {
    text-align: left;
    font-size: 1.5rem;
}
.line-break {
    background: black;
    width: 100%;
    height: 2px;
    display: block;
    margin: .5rem 0;
}
section#sticky-scroll {
    width: 100%;
    max-width: unset;
    display: flex;
    margin: 6rem auto 8rem auto;
}
.sticky-panel {
    min-height: 100vh;
    width: 60vw;
    position: relative;
}
.sticky-panel-image {
    background-image: url("https://images.unsplash.com/photo-1589779678221-a58efe659ca2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2071&q=80");
    background-size: cover;
    background-position: center;
    width: 100%;
    height: 100vh;
    position: sticky;
    top: 0;
}

.scroll-panel {
    width: 40vw;
}
.scroll-panel-text-card {
    margin: 3rem 0;
    padding: 4rem;
}
.scroll-panel-text-card> h3 {
    font-size: 2rem;
}
.scroll-panel-text-card>p {
    line-height: 1.6;
}
.scroll-panel-image {
    background-size: cover;
    background-position: center;
    width: 100%;
    min-height: 300px;
}
.scroll-panel-image-1 {
    background-image: url("https://images.unsplash.com/photo-1607739360893-7bbe4034727a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80");
}
.scroll-panel-image-2 {
    background-image: url("https://images.unsplash.com/photo-1591228127791-8e2eaef098d3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80");
}
.scroll-panel-image-3 {
    background-image: url("https://images.unsplash.com/photo-1459745930869-b3d0d72c3cbb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1374&q=80");
}
#parallax {
    margin: -8rem 0 0 0;
    max-width: unset;
    overflow: hidden;
}

.parallax-image {
    background: url("https://images.unsplash.com/photo-1541832676-9b763b0239ab?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80");
    background-position-x: center;
    background-position-y: 0%;
    width: 100%;
    height: 80vh;
}

#slideshow {
    margin: 6rem 0;
    max-width: unset;
    width: 100%;
    height: 50vh;
}
.slideshow-container {
    position: relative;
    width: 100%;
    height: 80%;
    overflow-x: hidden;
}
.slideshow-image {
    max-width: 600px;
    max-height: 375px;
    width: 42vw;
    height:calc(42vw * .625);
    background: lightgray;
    background-size: cover;
    color: white;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    position: absolute;
    top: 50%;
    left: 0%;
    transform: translate(-50%, -50%);
    transition: transform 1s ease, opacity 1s ease;
}
.left-start {
    transform: translate(calc(-50vw - 50%), -50%);
    opacity: .5;
   
}
.left {
    transform: translate(calc(0vw - 50%), -50%);
    opacity: .5;
    
}
.center {
    transform: translate(calc(50vw - 50%), -50%);
    opacity: 1;

  
}
.right {
    transform: translate(calc(100vw - 50%), -50%);
    opacity: .5;

}
.right-start {
    transform: translate(calc(150vw - 50%), -50%);
    opacity: .5;
}

footer {
    height: 20vh;
    min-width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow-x: hidden;
    color: white;
    background-attachment: fixed;
    background-image: url("https://images.unsplash.com/photo-1633876452407-998ae1dda84b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1933&q=80")
}


@media (max-width: 800px) {
    header>h1 {
        font-size: 3.5rem;
    }

    
    section#sticky-scroll {
        flex-direction: column;
        margin: 6rem auto 6rem auto;
    }
    .sticky-panel {
        width: 100vw;
    }
    .scroll-panel {
        width: 100vw;
    }
    .scroll-panel-text-card {
        padding: 0 2rem;
        text-align: center;
    }
    .slideshow-image {
        height:42vw;
    }
}

